--- a/backend/flask_project/requirements.txt
+++ b/backend/flask_project/requirements.txt
@@ -1,14 +1,11 @@
-pyyaml==6.0.1
+fastapi==0.115.12
+uvicorn==0.34.0
 pymysql==1.1.1
-mysql-connector-python==9.2.0
-Flask==3.1.0
-Flask-Cors==5.0.1
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.1.0
-Flask-JWT-Extended==4.7.1
-Flask-Limiter==3.12
-Flask-Caching==2.3.1 
-Flask-Restx==0.5.1
-python-dotenv==1.0.0
-marshmallow==3.26.1
-werkzeug==3.1.3
+sqlalchemy==2.0.39
+python-dotenv==1.1.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+pydantic[email]==2.9.2
+email-validator==2.2.0
+fastapi-mail==1.4.1
+python-multipart==0.0.9
