--- a/ui-app/package.json
+++ b/ui-app/package.json
@@ -16,7 +16,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.8",
+    "@radix-ui/react-toast": "^1.2.10",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.73.3",
     "axios": "^1.8.3",
@@ -24,9 +26,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
     "next": "15.2.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
